# ClaudeJournal

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  start-claudejournal.bat  start-claudejournal.ps1  stop-claudejournal.bat  stop-claudejournal.ps1
claudejournal/: __main__.py  arcs.py  audio.py  backlinks.py  brief.py  chat.py  cli.py  config.py  connections.py  db.py  discover.py  docs.py  entities.py  entity_pages.py  entity_synthesis.py  extract.py  interludes.py  learnings.py  mcp_server.py  monthly.py  mood.py  narrate.py  openloops.py  pipeline.py  post_process.py  rag.py  redact.py  render.py  rollup.py  scan.py  schedule.py  status.py  summary.py  templates.py  temporal.py  threads.py  topics.py
claudejournal/narrator/: __init__.py  base.py  claude_code.py
docs/: README.md
docs/design/: annotation-prompt-pins.md  document-curation.md  multi-source-ingestion.md  team-knowledge-layer.md  topic-pages-and-arcs.md  yearly-rollup.md
notes/: mcp-feedback-2026-04-29.md  oddities-2026-04-27.md
scripts/windows/: start-claudejournal.ps1  stop-claudejournal.ps1
